--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Look at all that pork!</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -22,14 +22,14 @@
     <body ng-controller="UserController">
 
       <div class="row">
-        <div class="header col-xs-10 col-sm-10 col-md-10">
-          <h1>My Delicious Articles</h1>
+        <div class="header col-xs-10 col-xs-offset-1 col-sm-10 .col-sm-offset-1 col-md-10 col-md-offset-1">
+          <h1 class="text-center">My Delicious Articles</h1>
         </div>
       </div>
       <div ng-repeat="article in articles">
 
         <div class="row">
-          <div class="article col-xs-10 col-sm-10 col-md-10">
+          <div class="article col-xs-10 col-xs-offset-1 col-sm-10 .col-sm-offset-1 col-md-10 col-md-offset-1">
 
             <a ng-class="theme" href="{{article.href}}"><h2>{{article.title}}</h2></a>
             <a ng-class="theme" href="{{article.href}}">
