--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           <div class="article col-xs-10 col-xs-offset-1 col-sm-10 .col-sm-offset-1 col-md-10 col-md-offset-1">
 
             <a ng-class="theme" href="{{article.href}}"><h2>{{article.title}}</h2></a>
-            <a ng-class="theme" href="{{article.href}}">
-              <p>{{article.summary}}</p>
-            </a>
+            <a ng-class="theme" href="{{article.href}}"><p>{{article.summary}}</p></a>
 
           </div>
         </div>
